Fixed tooltip overflow issue on mobile by changing to chakra tooltip; changed cursor to help on hover to be more consistent

--- a/src/components/FarmsOverview.module.scss
+++ b/src/components/FarmsOverview.module.scss
@@ -70,6 +70,7 @@ div.farmsOverview {
 
   .underline {
     border-bottom: 1px dotted var(--text);
+    cursor: help;
   }
 
   .titleBox {
