--- a/src/components/PoolOverview.scss
+++ b/src/components/PoolOverview.scss
@@ -145,6 +145,7 @@ div.poolOverview {
   }
   .underline {
     border-bottom: 1px dotted var(--text);
+    cursor: help;
   }
 }
 
