--- a/src/components/StakeDetails.module.scss
+++ b/src/components/StakeDetails.module.scss
@@ -50,6 +50,7 @@
 
 .underline {
   border-bottom: 1px dotted var(--text);
+  cursor: help;
 }
 
 .statsDetails {
